--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
             {
                 name: "Gibson",
                 price: "$10.000",
-                image: "./assets/img/clasicos/gibson.jpg",
+                image: "./img/clasicos/gibson.jpg",
                 ingredients: "Gin, Vermut Seco, Cebollita en vinagre",
                 description: "La variación más elegante del Martini. Se distingue por llevar una cebollita en vinagre en lugar de aceituna.",
                 profile: "Seco, Herbal"
@@ -1283,3 +1283,4 @@
     </script>
 </body>
 </html>
+
