--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
             {
                 name: "Gibson",
                 price: "$10.000",
-                image: "./img/clasicos/gibson.jpg",
+                image: "./assets/img/clasicos/gibson.jpg",
                 ingredients: "Gin, Vermut Seco, Cebollita en vinagre",
                 description: "La variación más elegante del Martini. Se distingue por llevar una cebollita en vinagre en lugar de aceituna.",
                 profile: "Seco, Herbal"
@@ -938,7 +938,7 @@
                 name: "Old Fashioned",
                 price: "$12.000",
                 image: "./assets/img/clasicos/oldfa.jpg",
-                ingredients: "Whisky, Azúcar, Angostura, Naranja",
+                ingredients: "Whisky, Azúcar, Angostura",
                 description: "El abuelo de todos los cocteles. Simple, elegante y poderoso. Whisky con azúcar, amargos y twist de naranja.",
                 profile: "Fuerte, Aromático"
             },
@@ -946,7 +946,7 @@
                 name: "Penicillin",
                 price: "$11.000",
                 image: "./assets/img/clasicos/Penicillin.jpg",
-                ingredients: "Whisky Escocés, Jengibre, Miel, Limón, Whisky Islay",
+                ingredients: "Whisky Escocés, Jengibre, Miel, Limón",
                 description: "Creación moderna que se volvió clásico instantáneo. Especiado, ahumado y curativo como su nombre indica.",
                 profile: "Especiado, Ahumado"
             },
@@ -954,7 +954,7 @@
                 name: "Blood and Sand",
                 price: "$10.000",
                 image: "./assets/img/clasicos/blood.jpg",
-                ingredients: "Whisky Escocés, Vermouth Rosso, Cherry Heering, Naranja",
+                ingredients: "Whisky Escocés, Vermouth Rosso, Cherry, Naranja",
                 description: "Clásico escocés inspirado en una película de 1922. Equilibrio perfecto entre dulce, amargo y frutal.",
                 profile: "Frutal, Equilibrado"
             },
@@ -970,7 +970,7 @@
                 name: "Pisco Sour",
                 price: "$15.000",
                 image: "./assets/img/clasicos/piscosour.jpg",
-                ingredients: "Pisco, Limón, Jarabe, Clara de huevo, Angostura",
+                ingredients: "Pisco, Limón, Jarabe, Clara de huevo (Albumina), Angostura",
                 description: "El orgullo sudamericano. Refrescante, espumoso y con el carácter único del pisco.",
                 profile: "Cítrico, Espumoso"
             },
@@ -983,10 +983,10 @@
                 profile: "Amargo, Refrescante"
             },
             {
-                name: "Clover Club",
+                name: "Tiki Clover Club",
                 price: "$10.000",
                 image: "./assets/img/clasicos/clover.jpg",
-                ingredients: "Gin, Frambuesa, Limón, Clara de huevo, Jarabe",
+                ingredients: "Gin, Frutos del Bosque, Limón, Clara de huevo (Albumina)",
                 description: "Clásico pre-prohibición con elegante espuma rosa. Frutal, sedoso y perfectamente equilibrado.",
                 profile: "Frutal, Sedoso"
             }
@@ -1283,4 +1283,5 @@
     </script>
 </body>
 </html>
+
 
