--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
             {
                 name: "Aviation Cocktail",
                 price: "$11.000",
-                image: "./assets/img/clasicos/vesper.jpg",
+                image: "./assets/img/clasicos/aviation.jpeg",
                 ingredients: "Gin, Maraschino, Crème de Violette, Limón",
                 description: "Un clásico pre-prohibición con su característico color violeta cielo. Floral, elegante y misterioso.",
                 profile: "Floral, Cítrico"
@@ -921,7 +921,7 @@
             {
                 name: "Vesper",
                 price: "$12.000",
-                image: "./assets/img/clasicos/vesper.jpg",
+                image: "./assets/img/clasicos/vesper2.jpg",
                 ingredients: "Gin, Vodka, Lillet Blanc",
                 description: "El Martini de James Bond. Fuerte, elegante y con carácter. Agitado, no revuelto.",
                 profile: "Seco, Potente"
@@ -1283,5 +1283,6 @@
     </script>
 </body>
 </html>
+
 
 
