--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
 
     <script>
         const TEST_MODE = false;
-        const TEST_DAY = 'wednesday';
+        const TEST_DAY = 'regular';
 
         const regularCocktails = [
             {
@@ -1283,6 +1283,7 @@
     </script>
 </body>
 </html>
+
 
 
 
