--- a/index.html
+++ b/index.html
@@ -797,8 +797,8 @@
         // 5. Abre la Consola (F12) para ver los logs
         // ============================================
         
-        const TEST_MODE = false;  // ← Cambia a true para activar modo prueba
-        const TEST_DAY = 'wednesday';  // ← Cambia a: 'wednesday', 'promo', o 'regular'
+        const TEST_MODE = true;  // ← Cambia a true para activar modo prueba
+        const TEST_DAY = 'promo';  // ← Cambia a: 'wednesday', 'promo', o 'regular'
 
         // Cocktails Data - CARTA REGULAR (Lunes, Martes, Viernes, Sábado)
         const regularCocktails = [
@@ -1298,3 +1298,4 @@
     </script>
 </body>
 </html>
+
