--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
         // ============================================
         
         const TEST_MODE = true;  // ← Cambia a true para activar modo prueba
-        const TEST_DAY = 'promo';  // ← Cambia a: 'wednesday', 'promo', o 'regular'
+        const TEST_DAY = 'regular';  // ← Cambia a: 'wednesday', 'promo', o 'regular'
 
         // Cocktails Data - CARTA REGULAR (Lunes, Martes, Viernes, Sábado)
         const regularCocktails = [
@@ -1298,4 +1298,5 @@
     </script>
 </body>
 </html>
+
 
