--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
         const wednesdayCocktails = [
             {
                 name: "Gibson",
-                price: "$10.000",
+                price: "$8.500",
                 image: "./assets/img/clasicos/gibson.jpg",
                 ingredients: "Gin, Vermut Seco, Cebollita en vinagre",
                 description: "La variación más elegante del Martini. Se distingue por llevar una cebollita en vinagre en lugar de aceituna.",
@@ -911,7 +911,7 @@
             },
             {
                 name: "Dry Martini",
-                price: "$10.000",
+                price: "$8.500",
                 image: "./assets/img/clasicos/drymartini.jpg",
                 ingredients: "Gin, Vermut Seco, Aceituna o twist de limón",
                 description: "El clásico por excelencia. Elegante, sofisticado y atemporal. La medida perfecta entre gin y vermut seco.",
@@ -919,7 +919,7 @@
             },
             {
                 name: "Gimlet",
-                price: "$10.000",
+                price: "$8.500",
                 image: "./assets/img/clasicos/Gimlet.jpg",
                 ingredients: "Gin, Jugo de Lima, Jarabe Simple",
                 description: "Clásico refrescante y directo. Gin con lima y un toque de dulzor. Simple pero sofisticado.",
@@ -927,7 +927,7 @@
             },
             {
                 name: "Aviation Cocktail",
-                price: "$11.000",
+                price: "$9.000",
                 image: "./assets/img/clasicos/aviation.jpeg",
                 ingredients: "Gin, Maraschino, Crème de Violette, Limón",
                 description: "Un clásico pre-prohibición con su característico color violeta cielo. Floral, elegante y misterioso.",
@@ -943,7 +943,7 @@
             },
             {
                 name: "Manhattan",
-                price: "$12.000",
+                price: "$15.000",
                 image: "./assets/img/clasicos/Manhattan.jpg",
                 ingredients: "Whisky, Vermut Rosso, Angostura, Cereza",
                 description: "El rey de los clásicos americanos. Whisky y vermut rojo en perfecta armonía con amargos aromáticos.",
@@ -951,7 +951,7 @@
             },
             {
                 name: "Old Fashioned",
-                price: "$12.000",
+                price: "$15.000",
                 image: "./assets/img/clasicos/oldfa.jpg",
                 ingredients: "Whisky, Azúcar, Angostura, Naranja",
                 description: "El abuelo de todos los cocteles. Simple, elegante y poderoso. Whisky con azúcar, amargos y twist de naranja.",
@@ -959,7 +959,7 @@
             },
             {
                 name: "Penicillin",
-                price: "$11.000",
+                price: "$10.000",
                 image: "./assets/img/clasicos/penicillin.jpg",
                 ingredients: "Whisky Escocés, Jengibre, Miel, Limón, Whisky Islay",
                 description: "Creación moderna que se volvió clásico instantáneo. Especiado, ahumado y curativo como su nombre indica.",
@@ -975,7 +975,7 @@
             },
             {
                 name: "Boulevardier",
-                price: "$10.000",
+                price: "$15.000",
                 image: "./assets/img/clasicos/negroni.jpg",
                 ingredients: "Bourbon, Campari, Vermut Rosso",
                 description: "El Negroni americano. Whisky bourbon en lugar de gin, creando un perfil más robusto y especiado.",
@@ -1167,7 +1167,7 @@
                 `;
                 
                 document.getElementById('modalTitle').innerHTML = '🎩 ¡Miércoles de Clásicos! 🎩';
-                document.getElementById('modalText').innerHTML = 'Hoy disfrutá de nuestra carta especial con <strong>13 cocteles clásicos</strong> de la coctelería mundial. Gibson, Dry Martini, Aviation, Vesper y más. ¡Acércate a la barra para ordenar!';
+                document.getElementById('modalText').innerHTML = 'Hoy disfrutá de nuestra carta especial con <strong>13 cocteles clásicos</strong> de la coctelería mundial. ¡Acércate a la barra para ordenar!';
             }
             // JUEVES Y DOMINGO - Solo banner de promo, carta Tiki normal
             else if (dayType === 'promo') {
@@ -1298,6 +1298,7 @@
     </script>
 </body>
 </html>
+
 
 
 
