--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
                 name: "Penicillin",
                 price: "$10.000",
                 image: "./assets/img/clasicos/penicillin.jpg",
-                ingredients: "Whisky Escocés, Jengibre, Miel, Limón, Whisky Islay",
+                ingredients: "Whisky Escocés, Jengibre, Miel, Limón",
                 description: "Creación moderna que se volvió clásico instantáneo. Especiado, ahumado y curativo como su nombre indica.",
                 profile: "Especiado, Ahumado"
             },
@@ -1001,7 +1001,7 @@
                 name: "Clover Club",
                 price: "$10.000",
                 image: "./assets/img/clasicos/clover.jpg",
-                ingredients: "Gin, Frambuesa, Limón, Clara de huevo, Jarabe",
+                ingredients: "Gin, Frutos del bosque, Limón, Clara de huevo, Azucar",
                 description: "Clásico pre-prohibición con elegante espuma rosa. Frutal, sedoso y perfectamente equilibrado.",
                 profile: "Frutal, Sedoso"
             }
@@ -1298,6 +1298,7 @@
     </script>
 </body>
 </html>
+
 
 
 
