--- a/index.html
+++ b/index.html
@@ -827,11 +827,11 @@
                 profile: "Amargo, Cítrico"
             },
             {
-                name: "Kikuya Lapu",
+                name: "Singapur Sling",
                 price: "$8.500",
-                image: "./assets/img/kikuyaa.jpg",
-                ingredients: "Ron, Syrup Maracuyá, Limón, Naranja, Ananá, Pomelo, Arándanos",
-                description: "Perfil dulce, tropical y cítrico. Ideal para quienes buscan equilibrio, llevándote al Pacífico.",
+                image: "./assets/img/singapur.jpg",
+                ingredients: "Gin, Licor Cheery Brandy, Esperidina, Lima, Ananá, Granadina",
+                description: "Perfil dulce, tropical. Ideal para quienes buscan equilibrio, llevándote al Pacífico.",
                 profile: "Agridulce"
             },
             {
@@ -851,11 +851,11 @@
                 profile: "Agridulce, Tropical"
             },
             {
-                name: "Tropical Punch",
+                name: "Saturno",
                 price: "$7.900",
-                image: "./assets/img/tropicalpunch.jpg",
-                ingredients: "Ron, Aperol, Naranja Mango, Lima, Syrup de Jengibre",
-                description: "El golpe alegre del verano eterno: frutal, chispeante y con toque atrevido.",
+                image: "./assets/img/saturno.jpg",
+                ingredients: "Gin, Falernum, Maracuya, lima, Orgeat",
+                description: "Cóctel tiki elegante y exótico, de perfil cítrico y especiado. Mezcla gin, maracuyá, limón fresco y un sutil toque de falernum, logrando un balance refrescante, aromático y sorprendente. Ideal para viajar directo al espíritu tropical",
                 profile: "Cítrico, Tropical"
             },
             {
@@ -875,12 +875,12 @@
                 profile: "Dulce"
             },
             {
-                name: "Kairos",
+                name: "Darnk & Stormy",
                 price: "$8.500",
-                image: "./assets/img/trago4.jpeg",
-                ingredients: "Ron, Falernum, Lima, Ananá, Pomelo, Syrup de Kiwi, Infusión de frutas patagónicas",
-                description: "Creado por nuestra bartender Camila. Finalista en Tiki League Argentina 2024.",
-                profile: "Tropical, Especiado"
+                image: "./assets/img/dark.jpeg",
+                ingredients: "Ron, Lima, Ginger beer",
+                description: "Clásico caribeño, intenso y refrescante. Combina ron oscuro con cerveza de jengibre y un toque de lima, logrando un equilibrio perfecto entre picante, dulce y cítrico. Ideal para quienes buscan un trago con carácter y mucha personalidad",
+                profile: "Citrico, refrescante, con un leve picor."
             },
             {
                 name: "Tiki Bang",
@@ -1298,6 +1298,7 @@
     </script>
 </body>
 </html>
+
 
 
 
