--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
             {
                 name: "Darnk & Stormy",
                 price: "$8.500",
-                image: "./assets/img/dark.jpeg",
+                image: "./assets/img/dark.jpg",
                 ingredients: "Ron, Lima, Ginger beer",
                 description: "Clásico caribeño, intenso y refrescante. Combina ron oscuro con cerveza de jengibre y un toque de lima, logrando un equilibrio perfecto entre picante, dulce y cítrico. Ideal para quienes buscan un trago con carácter y mucha personalidad",
                 profile: "Citrico, refrescante, con un leve picor."
@@ -1298,6 +1298,7 @@
     </script>
 </body>
 </html>
+
 
 
 
