--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,24 @@
                 ingredients: "Gin, Frutos del bosque, Limón, Clara de huevo, Azucar",
                 description: "Clásico pre-prohibición con elegante espuma rosa. Frutal, sedoso y perfectamente equilibrado.",
                 profile: "Frutal, Sedoso"
+            },
+            {
+                name: "Zombie",
+                price: "$8.500",
+                image: "./assets/img/zombieee.jpg",
+                ingredients: "Ron Blanco, Ron Dorado, Falernum, Lima, Pomelo, Canela y mucho FUEGO!",
+                description: "El Zombie es un cóctel tiki legendario, creado en 1934 por Donn Beach. Famoso por 'revivir a los muertos'.",
+                profile: "Agridulce, Especiado"
+            },
+            {
+                name: "Mai Tai",
+                price: "$14.000",
+                image: "./assets/img/trago3.jpeg",
+                ingredients: "Ron de Jamaica, Orgeat, Lima, Orange Curaçao",
+                description: "Clásico equilibrado con matices tropicales, cítrico y almendras. Creado por Trader Vic's en 1944.",
+                profile: "Cítrico"
             }
+            
         ];
 
         const promoCocktails = [
@@ -1298,6 +1315,7 @@
     </script>
 </body>
 </html>
+
 
 
 
