--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
                 name: "Blood and Sand",
                 price: "$10.000",
                 image: "./assets/img/clasicos/blood.jpg",
-                ingredients: "Whisky Escocés, Vermouth Rosso, Cherry Heering, Naranja",
+                ingredients: "Whisky Escocés, Vermouth Rosso, Cherry licor, Naranja",
                 description: "Clásico escocés inspirado en una película de 1922. Equilibrio perfecto entre dulce, amargo y frutal.",
                 profile: "Frutal, Equilibrado"
             },
@@ -1315,6 +1315,7 @@
     </script>
 </body>
 </html>
+
 
 
 
