--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
         // 5. Abre la Consola (F12) para ver los logs
         // ============================================
         
-        const TEST_MODE = true;  // ← Cambia a true para activar modo prueba
+        const TEST_MODE = false;  // ← Cambia a true para activar modo prueba
         const TEST_DAY = 'regular';  // ← Cambia a: 'wednesday', 'promo', o 'regular'
 
         // Cocktails Data - CARTA REGULAR (Lunes, Martes, Viernes, Sábado)
@@ -1315,6 +1315,7 @@
     </script>
 </body>
 </html>
+
 
 
 
