Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1006,6 +1006,14 @@
                 profile: "Frutal, Sedoso"
             },
             {
+                name: "Saltamontes",
+                price: "$9.000",
+                image: "./assets/img/clasicos/grasshopper.jpg",
+                ingredients: "Vodka, Licor de chocolate Blanco, Licor de Menta, Crema",
+                description: "Clásico cremoso y fresco. El dulce perfecto que estabas esperando.",
+                profile: "Dulce"
+            },
+            {
                 name: "Zombie",
                 price: "$8.500",
                 image: "./assets/img/zombieee.jpg",
@@ -1315,6 +1323,7 @@
     </script>
 </body>
 </html>
+
 
 
 
