--- a/index.html
+++ b/index.html
@@ -606,7 +606,11 @@
                 margin-top: 2rem;
             }
 
-            .cocktail-image { height: 250px; }
+            .cocktail-image { 
+    height: 280px;
+    object-fit: contain;
+    background: linear-gradient(135deg, rgba(26, 26, 46, 0.8), rgba(15, 15, 30, 0.8));
+}
             .cocktail-info { padding: 1.5rem; }
             .cocktail-name { font-size: 1.8rem; }
 
@@ -627,6 +631,7 @@
             .section-title { font-size: 1.7rem; }
             .logo { font-size: 1.5rem; }
             .banner-content h2 { font-size: 1.4rem; }
+            cocktail-image { height: 300px;}
         }
     </style>
 </head>
@@ -1323,6 +1328,7 @@
     </script>
 </body>
 </html>
+
 
 
 
