--- a/index.html
+++ b/index.html
@@ -896,6 +896,14 @@
                 profile: "Tropical, Especiado"
             },
             {
+                name: "PI YI",
+                price: "$8.500",
+                image: "./assets/img/kikuya.jpg",
+                ingredients: "Blend de Rones, Maracuya, Apricot Brandy, Miel, Lima, Ananá",
+                description: "Explosión tropical que te transporta a el paraiso tropical en cada sorbo",
+                profile: "Tropical "
+            },
+            {
                 name: "Blood of the Kapu Tiki",
                 price: "$17.000",
                 image: "./assets/img/blood.jpeg",
@@ -1328,6 +1336,7 @@
     </script>
 </body>
 </html>
+
 
 
 
