Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
             {
                 name: "PI YI",
                 price: "$8.500",
-                image: "./assets/img/kikuya.jpg",
+                image: "./assets/img/kikuyaa.jpg",
                 ingredients: "Blend de Rones, Maracuya, Apricot Brandy, Miel, Lima, Ananá",
                 description: "Explosión tropical que te transporta a el paraiso tropical en cada sorbo",
                 profile: "Tropical "
@@ -1336,6 +1336,7 @@
     </script>
 </body>
 </html>
+
 
 
 
