Update greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
                 image: "./assets/img/kikuyaa.jpg",
                 ingredients: "Blend de Rones, Maracuya, Apricot Brandy, Miel, Lima, Ananá",
                 description: "Explosión tropical que te transporta a el paraiso tropical en cada sorbo",
-                profile: "Tropical "
+                profile: "Citrico equilibrado. "
             },
             {
                 name: "Blood of the Kapu Tiki",
@@ -1336,6 +1336,7 @@
     </script>
 </body>
 </html>
+
 
 
 
