--- a/index.html
+++ b/index.html
@@ -1125,6 +1125,10 @@
                 { name: "Tequeños x6", price: "$10.000" },
                 { name: "Tequeños x12", price: "$18.000" }
             ]
+
+            appetizers2:  [
+                { name: "Mani tipo cervecero", price: "$5.000" }
+        ]
         };
 
         const wednesdayFood = {
@@ -1288,6 +1292,15 @@
                         ${foodMenu.appetizers.map(item => `<tr><td>${item.name}</td><td class="price">${item.price}</td></tr>`).join('')}
                     </tbody>
                 </table>
+
+                <h3 style="font-family: var(--font-fun); font-size: 2rem; margin-top: 3rem; color: var(--primary); text-align: center;">Snack</h3>
+                <table class="menu-table fade-in">
+                    <tbody>
+                        ${foodMenu.appetizers2.map(item => `<tr><td>${item.name}</td><td class="price">${item.price}</td></tr>`).join('')}
+                    </tbody>
+                </table>
+
+                
             `;
         }
 
@@ -1336,6 +1349,7 @@
     </script>
 </body>
 </html>
+
 
 
 
