--- a/index.html
+++ b/index.html
@@ -879,14 +879,14 @@
                 description: "Dulce, con explosión de sabores para que luego tengas Dulces Sueños.",
                 profile: "Dulce"
             },
-            {
-                name: "Darnk & Stormy",
-                price: "$8.500",
-                image: "./assets/img/dark.jpg",
-                ingredients: "Ron, Lima, Ginger beer",
-                description: "Clásico caribeño, intenso y refrescante. Combina ron oscuro con cerveza de jengibre y un toque de lima, logrando un equilibrio perfecto entre picante, dulce y cítrico. Ideal para quienes buscan un trago con carácter y mucha personalidad",
-                profile: "Citrico, refrescante, con un leve picor."
-            },
+        //    {
+        //        name: "Darnk & Stormy",
+        //        price: "$8.500",
+        //        image: "./assets/img/dark.jpg",
+        //        ingredients: "Ron, Lima, Ginger beer",
+        //        description: "Clásico caribeño, intenso y refrescante. Combina ron oscuro con cerveza de jengibre y un toque de lima, logrando un equilibrio perfecto entre picante, dulce y cítrico. Ideal para quienes buscan un trago con carácter y mucha personalidad",
+        //        profile: "Citrico, refrescante, con un leve picor."
+        //    },
             {
                 name: "Tiki Bang",
                 price: "$8.500",
@@ -1351,6 +1351,7 @@
     </script>
 </body>
 </html>
+
 
 
 
