--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2025 Tiki House Bar - Buenos Aires</p>
+            <p>&copy; 2024 Tiki House Bar - La Plata</p>
             <p style="margin-top: 1rem;">
                 <a href="#" class="footer-link">Volver arriba ↑</a>
             </p>
@@ -1351,6 +1351,7 @@
     </script>
 </body>
 </html>
+
 
 
 
